Revision history for Perl library Devel-Platform-Info
=====================================================

0.10    current
	- updated BSD derivative list.

0.09    25/05/2011
        - remove trailing newlines from Mac command results (JJ)

0.08    01/04/2011
        - added Scientific Linux distro (as suggested by Norbert Gruener).

0.07	13/01/2011
        - updated several distribution codenames (Linux & Mac).
        - documentation update.

0.06	15/07/2010
        - added requirement for Test-JSON-Meta-0.08 due to issues with old
          versions of JSON not implementing the current API.
	    - better 32/64 detection for BSD (thanks to Chris Williams for help)
	    - upped version check of Test-JSON-Meta to ensure we have JSON v2.

0.05	12/07/2010
        - updated Mac version check (Colin Newell).
        - added Mac tests (Colin Newell).
        - updated diag reference test (Colin Newell).

0.04	04/07/2010
        - fixed Solaris internal references.
        - fixed BSD kernel version formatting.
        - changed 'source' to be a hash not a string. (Colin's suggestion).

0.03    02/07/2010
        - added support for more known Linux distributions.
        - better pattern matching for osvers and oslabel in Linux.pm
        - added reference links.
        - reimplemented use tests for plugins.
        - added specific support plugin for Solaris family.

0.02    01/07/2010
        - added support for Irix and the BSD family.

0.01    30/06/2010
        - initial release.