@@ -3,6 +3,7 @@ Revision history for Perl library Devel-Platform-Info
 
 0.10    current
 	- updated BSD derivative list.
+	- fixed OpenSolaris/Solaris oslabel/osvers elements.
 
 0.09    25/05/2011
         - remove trailing newlines from Mac command results (JJ)
